--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
-  "version": 2,
-  "buildCommand": "pnpm install && pnpm build",
-  "outputDirectory": "client/dist",
-  "framework": "vite",
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
   "installCommand": "pnpm install",
-  "devCommand": "pnpm dev",
-  "rewrites": [
-    {
-      "source": "/trpc/(.*)",
-      "destination": "/api/trpc/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "framework": null,
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs20.x"
     }
-  ]
+  }
 }
 
