fix: Adicionar configuração Vercel serverless functions
- Criado api/index.js para serverless function
- Atualizado vercel.json com rewrites e functions config
- Configurado roteamento /api/* para serverless backend

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,18 @@
   "buildCommand": "pnpm build",
   "outputDirectory": "dist/public",
   "installCommand": "pnpm install",
-  "framework": null
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/index"
+    }
+  ],
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs20.x",
+      "maxDuration": 10
+    }
+  }
 }
 
