--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
@@ -82,8 +83,10 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/express": "4.17.21",
     "@types/node": "^24.7.0",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@vercel/node": "^5.5.0",
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
