--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,16 @@
       "source": "/api/trpc/:path*",
       "destination": "/api"
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/trpc/(.*)",
+      "dest": "/api"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
 
